use_undefined_identifier/c3/CheckBadFlow
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/CheckBadFlow/src/partner.c:1011:1: error: use of undeclared identifier 'CheckBadFlow_pawnmated'
CheckBadFlow_pawnmated = 0; 
^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/CheckBadFlow/src/partner.c:1012:1: error: use of undeclared identifier 'CheckBadFlow_knightmated'
CheckBadFlow_knightmated = 0; 
^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/CheckBadFlow/src/partner.c:1013:1: error: use of undeclared identifier 'CheckBadFlow_bishopmated'
CheckBadFlow_bishopmated = 0; 
^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/CheckBadFlow/src/partner.c:1014:1: error: use of undeclared identifier 'CheckBadFlow_rookmated'
CheckBadFlow_rookmated = 0; 
^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/CheckBadFlow/src/partner.c:1015:1: error: use of undeclared identifier 'CheckBadFlow_queenmated'
CheckBadFlow_queenmated = 0; 
^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/CheckBadFlow/src/partner.c:1283:13: error: use of undeclared identifier 'CheckBadFlow_pawnmated'
if ( v53 != CheckBadFlow_pawnmated ) 
            ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/CheckBadFlow/src/partner.c:1293:15: error: use of undeclared identifier 'CheckBadFlow_pawnmated'
if ( !( v53 | CheckBadFlow_pawnmated) ) 
              ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/CheckBadFlow/src/partner.c:1302:13: error: use of undeclared identifier 'CheckBadFlow_knightmated'
if ( v63 != CheckBadFlow_knightmated ) 
            ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/CheckBadFlow/src/partner.c:1308:20: error: use of undeclared identifier 'CheckBadFlow_knightmated'
else if ( !( v63 | CheckBadFlow_knightmated) ) 
                   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/CheckBadFlow/src/partner.c:1316:13: error: use of undeclared identifier 'CheckBadFlow_bishopmated'
if ( v62 == CheckBadFlow_bishopmated ) 
            ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/CheckBadFlow/src/partner.c:1325:15: error: use of undeclared identifier 'CheckBadFlow_bishopmated'
if ( !( v62 | CheckBadFlow_bishopmated) ) 
              ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/CheckBadFlow/src/partner.c:1334:13: error: use of undeclared identifier 'CheckBadFlow_rookmated'
if ( v61 != CheckBadFlow_rookmated ) 
            ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/CheckBadFlow/src/partner.c:1340:20: error: use of undeclared identifier 'CheckBadFlow_rookmated'
else if ( !( v61 | CheckBadFlow_rookmated) ) 
                   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/CheckBadFlow/src/partner.c:1348:13: error: use of undeclared identifier 'CheckBadFlow_queenmated'
if ( v35 != CheckBadFlow_queenmated ) 
            ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/CheckBadFlow/src/partner.c:1354:20: error: use of undeclared identifier 'CheckBadFlow_queenmated'
else if ( !( v35 | CheckBadFlow_queenmated) ) 
                   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/CheckBadFlow/src/partner.c:1422:7: error: use of undeclared identifier 'CheckBadFlow_pawnmated'
v48 = CheckBadFlow_pawnmated - 1; 
      ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/CheckBadFlow/src/partner.c:1425:7: error: use of undeclared identifier 'CheckBadFlow_bishopmated'
v49 = CheckBadFlow_bishopmated - 1; 
      ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/CheckBadFlow/src/partner.c:1428:1: error: use of undeclared identifier 'CheckBadFlow_pawnmated'
CheckBadFlow_pawnmated = v48; 
^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/CheckBadFlow/src/partner.c:1429:1: error: use of undeclared identifier 'CheckBadFlow_bishopmated'
CheckBadFlow_bishopmated = v49; 
^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/CheckBadFlow/src/partner.c:1430:7: error: use of undeclared identifier 'CheckBadFlow_rookmated'
v50 = CheckBadFlow_rookmated - 1; 
      ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/CheckBadFlow/src/partner.c:1433:7: error: use of undeclared identifier 'CheckBadFlow_queenmated'
v51 = CheckBadFlow_queenmated - 1; 
      ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/CheckBadFlow/src/partner.c:1436:1: error: use of undeclared identifier 'CheckBadFlow_rookmated'
CheckBadFlow_rookmated = v50; 
^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/CheckBadFlow/src/partner.c:1437:1: error: use of undeclared identifier 'CheckBadFlow_queenmated'
CheckBadFlow_queenmated = v51; 
^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/CheckBadFlow/src/partner.c:1438:7: error: use of undeclared identifier 'CheckBadFlow_knightmated'
v52 = CheckBadFlow_knightmated - 1; 
      ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/CheckBadFlow/src/partner.c:1441:1: error: use of undeclared identifier 'CheckBadFlow_knightmated'
CheckBadFlow_knightmated = v52; 
^
25 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/CheckBadFlow/src/obj/partner.o] Error 1
